crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslintrcjson_fix.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint --fix
```

## `biome.json`

```json
{
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "none",
      "complexity": { "noUselessLabel": "error", "useLiteralKeys": "off" },
      "security": { "noGlobalEval": "warn" },
      "style": { "useDefaultParameterLast": "off" },
      "suspicious": { "noDoubleEquals": "warn", "useGetterReturn": "error" }
    },
    "includes": ["**", "**/*.test.js"]
  },
  "javascript": { "globals": ["var1", "var2"] },
  "overrides": [
    {
      "includes": ["bin/*.js", "lib/*.js", "!*.test.js"],
      "linter": { "rules": { "suspicious": { "noDoubleEquals": "off" } } }
    }
  ]
}
```

## `.eslintrc.json`

```json
{
        "ignorePatterns": [
            "**/*.test.js", // trailing comma amd comment
        ],
        "globals": {
            "var1": "writable",
            "var2": "readonly"
        },
        "rules": {
            "dot-notation": 0,
            "default-param-last": "off",
            "eqeqeq": "warn",
            "getter-return": [2,
                // support unknown options
                { "allowImplicit": true }
            ],
            "no-eval": 1,
            "no-extra-label": ["error"]
        },
        "overrides": [{
            "files": ["bin/*.js", "lib/*.js"],
            "excludedFiles": "*.test.js",
            "rules": {
                "eqeqeq": ["off"]
            }
        }],
        "unknownField": "ignored"
    }
```

# Emitted Messages

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 6 ESLint rules found
    - 6 have been migrated to Biome's rules
    - 100% (6) of your ESLint rules are fully covered by Biome
      - 100% (6) via direct migration to Biome rules
  
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration successfully migrated.
  

```
