crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslintrcjson_include_inspired.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint --include-inspired
```

## `biome.json`

```json
{}
```

## `.eslintrc.json`

```json
{ "rules": { "no-else-return": "error" } }
```

# Emitted Messages

```block
biome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1   │ - {}
      1 │ + {
      2 │ + → "linter":·{
      3 │ + → → "rules":·{·"preset":·"none",·"style":·{·"noUselessElse":·"error"·}·}
      4 │ + → }
      5 │ + }
      6 │ + 
  

```

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 1 ESLint rules found
    - 1 can be migrated to Biome's rules (run with --write to migrate)
    - 100% (1) of your ESLint rules are fully covered by Biome
      - 100% (1) via direct migration to Biome rules
  
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ biome migrate --write
  

```
