crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslintrcjson_override_existing_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "preset": "recommended",
      "suspicious": { "noDoubleEquals": "error" }
    }
  }
}
```

## `.eslintrc.json`

```json
{ "rules": { "eqeqeq": "off" } }
```

# Emitted Messages

```block
biome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1   │ - {·"linter":·{·"rules":·{·"preset":·"recommended",·"suspicious":·{·"noDoubleEquals":·"error"·}·}·}·}
      1 │ + {
      2 │ + → "linter":·{
      3 │ + → → "rules":·{·"preset":·"none",·"suspicious":·{·"noDoubleEquals":·"off"·}·}
      4 │ + → }
      5 │ + }
      6 │ + 
  

```

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 1 ESLint rules found
    - 1 can be migrated to Biome's rules (run with --write to migrate)
    - 100% (1) of your ESLint rules are fully covered by Biome
      - 100% (1) via direct migration to Biome rules
  
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ biome migrate --write
  

```
