crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslintrcjson_rule_options.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint --include-inspired
```

## `biome.json`

```json
{ "linter": { "enabled": true } }
```

## `.eslintrc.json`

```json
{
        "rules": {
            "no-restricted-globals": ["error", "event", "fdescribe"],
            "jsx-a11y/aria-role": ["error", {
                "allowedInvalidRoles": ["text"],
                "ignoreNonDOM": true
            }],
            "@typescript-eslint/array-type": ["error", { "default": "generic" }],
            "@typescript-eslint/consistent-type-imports": ["error", { "fixStyle": "inline-type-imports" }],
            "@typescript-eslint/naming-convention": ["error",
                {
                    "selector": "property",
                    "leadingUnderscore": "forbid"
                },
                {
                    "selector": "property",
                    "modifiers": ["private"],
                    "format": ["strictCamelCase"],
                    "leadingUnderscore": "require"
                },
                {
                    "selector": "interface",
                    "prefix": ["I", "IO"]
                },
                {
                    "selector": "enumMember",
                    "format": ["UPPER_CASE"]
                },
                {
                    "selector": "variable",
                    "types": ["boolean"],
                    "format": ["UPPER_CASE"]
                }
            ],
            "unicorn/filename-case": ["error", {
                "cases": {
                    "camelCase": true,
                    "pascalCase": true
                }
            }]
        },
        "overrides": [{
            "files": "default.js",
            "rules": {
                "no-restricted-globals": "error",
                "jsx-a11y/aria-role": "error",
                "@typescript-eslint/array-type": "error",
                "@typescript-eslint/naming-convention": "error",
                "unicorn/filename-case": "error"
            }
        }, {
            "files": ["alternative.js"],
            "rules": {
                "no-restricted-globals": ["error",
                    {
                        "name": "event",
                        "message": "Use local parameter instead."
                    },
                    {
                        "name": "fdescribe",
                        "message": "Do not commit fdescribe. Use describe instead."
                    }
                ],
                "@typescript-eslint/array-type": ["error", { "default": "array" }],
                "@typescript-eslint/naming-convention": ["error",
                    {
                        "selector": "default",
                        "format": ["UPPER_CASE"]
                    }
                ],
                "unicorn/filename-case": ["error", {
                    "case": "kebabCase",
                    "multipleFileExtensions": true
                }]
            }
        }]
    }
```

# Emitted Messages

```block
biome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1     │ - {·"linter":·{·"enabled":·true·}·}
        1 │ + {
        2 │ + → "linter":·{
        3 │ + → → "enabled":·true,
        4 │ + → → "rules":·{
        5 │ + → → → "preset":·"none",
        6 │ + → → → "a11y":·{
        7 │ + → → → → "useValidAriaRole":·{
        8 │ + → → → → → "level":·"error",
        9 │ + → → → → → "options":·{·"allowInvalidRoles":·["text"],·"ignoreNonDom":·true·}
       10 │ + → → → → }
       11 │ + → → → },
       12 │ + → → → "style":·{
       13 │ + → → → → "noRestrictedGlobals":·{
       14 │ + → → → → → "level":·"error",
       15 │ + → → → → → "options":·{
       16 │ + → → → → → → "deniedGlobals":·{
       17 │ + → → → → → → → "fdescribe":·"TODO:·Add·a·custom·message·here.",
       18 │ + → → → → → → → "event":·"TODO:·Add·a·custom·message·here."
       19 │ + → → → → → → }
       20 │ + → → → → → }
       21 │ + → → → → },
       22 │ + → → → → "useConsistentArrayType":·{
       23 │ + → → → → → "level":·"error",
       24 │ + → → → → → "options":·{·"syntax":·"generic"·}
       25 │ + → → → → },
       26 │ + → → → → "useFilenamingConvention":·{
       27 │ + → → → → → "level":·"error",
       28 │ + → → → → → "options":·{·"filenameCases":·["camelCase",·"PascalCase"]·}
       29 │ + → → → → },
       30 │ + → → → → "useImportType":·{
       31 │ + → → → → → "level":·"error",
       32 │ + → → → → → "options":·{·"style":·"inlineType"·}
       33 │ + → → → → },
       34 │ + → → → → "useNamingConvention":·{
       35 │ + → → → → → "level":·"error",
       36 │ + → → → → → "options":·{
       37 │ + → → → → → → "strictCase":·false,
       38 │ + → → → → → → "requireAscii":·false,
       39 │ + → → → → → → "conventions":·[
       40 │ + → → → → → → → {
       41 │ + → → → → → → → → "selector":·{·"kind":·"enumMember"·},
       42 │ + → → → → → → → → "formats":·["CONSTANT_CASE"]
       43 │ + → → → → → → → },
       44 │ + → → → → → → → {·"selector":·{·"kind":·"interface"·},·"match":·"(?:I|IO)(.*)"·},
       45 │ + → → → → → → → {
       46 │ + → → → → → → → → "selector":·{
       47 │ + → → → → → → → → → "kind":·"classProperty",
       48 │ + → → → → → → → → → "modifiers":·["private"]
       49 │ + → → → → → → → → },
       50 │ + → → → → → → → → "match":·"_([^_]*)",
       51 │ + → → → → → → → → "formats":·["camelCase"]
       52 │ + → → → → → → → },
       53 │ + → → → → → → → {·"selector":·{·"kind":·"classProperty"·},·"match":·"([^_]*)"·},
       54 │ + → → → → → → → {·"selector":·{·"kind":·"typeProperty"·},·"match":·"([^_]*)"·},
       55 │ + → → → → → → → {
       56 │ + → → → → → → → → "selector":·{·"kind":·"objectLiteralProperty"·},
       57 │ + → → → → → → → → "match":·"([^_]*)"
       58 │ + → → → → → → → }
       59 │ + → → → → → → ]
       60 │ + → → → → → }
       61 │ + → → → → }
       62 │ + → → → }
       63 │ + → → }
       64 │ + → },
       65 │ + → "overrides":·[
       66 │ + → → {
       67 │ + → → → "includes":·["default.js"],
       68 │ + → → → "linter":·{
       69 │ + → → → → "rules":·{
       70 │ + → → → → → "a11y":·{·"useValidAriaRole":·"error"·},
       71 │ + → → → → → "style":·{
       72 │ + → → → → → → "noRestrictedGlobals":·{·"level":·"error",·"options":·{}·},
       73 │ + → → → → → → "useConsistentArrayType":·"error",
       74 │ + → → → → → → "useFilenamingConvention":·{
       75 │ + → → → → → → → "level":·"error",
       76 │ + → → → → → → → "options":·{·"filenameCases":·["kebab-case"]·}
       77 │ + → → → → → → },
       78 │ + → → → → → → "useNamingConvention":·{
       79 │ + → → → → → → → "level":·"error",
       80 │ + → → → → → → → "options":·{·"strictCase":·false,·"requireAscii":·false·}
       81 │ + → → → → → → }
       82 │ + → → → → → }
       83 │ + → → → → }
       84 │ + → → → }
       85 │ + → → },
       86 │ + → → {
       87 │ + → → → "includes":·["alternative.js"],
       88 │ + → → → "linter":·{
       89 │ + → → → → "rules":·{
       90 │ + → → → → → "style":·{
       91 │ + → → → → → → "noRestrictedGlobals":·{
       92 │ + → → → → → → → "level":·"error",
       93 │ + → → → → → → → "options":·{
       94 │ + → → → → → → → → "deniedGlobals":·{
       95 │ + → → → → → → → → → "fdescribe":·"Do·not·commit·fdescribe.·Use·describe·instead.",
       96 │ + → → → → → → → → → "event":·"Use·local·parameter·instead."
       97 │ + → → → → → → → → }
       98 │ + → → → → → → → }
       99 │ + → → → → → → },
      100 │ + → → → → → → "useConsistentArrayType":·{
      101 │ + → → → → → → → "level":·"error",
      102 │ + → → → → → → → "options":·{·"syntax":·"shorthand"·}
      103 │ + → → → → → → },
      104 │ + → → → → → → "useFilenamingConvention":·{
      105 │ + → → → → → → → "level":·"error",
      106 │ + → → → → → → → "options":·{·"filenameCases":·["kebab-case"]·}
      107 │ + → → → → → → },
      108 │ + → → → → → → "useNamingConvention":·{
      109 │ + → → → → → → → "level":·"error",
      110 │ + → → → → → → → "options":·{
      111 │ + → → → → → → → → "strictCase":·false,
      112 │ + → → → → → → → → "requireAscii":·false,
      113 │ + → → → → → → → → "conventions":·[{·"formats":·["CONSTANT_CASE"]·}]
      114 │ + → → → → → → → }
      115 │ + → → → → → → }
      116 │ + → → → → → }
      117 │ + → → → → }
      118 │ + → → → }
      119 │ + → → }
      120 │ + → ]
      121 │ + }
      122 │ + 
  

```

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 6 ESLint rules found
    - 6 can be migrated to Biome's rules (run with --write to migrate)
    - 100% (6) of your ESLint rules are fully covered by Biome
      - 100% (6) via direct migration to Biome rules
  
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ biome migrate --write
  

```
