crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslintrcyaml_unsupported.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint
```

## `biome.json`

```json
{}
```

## `.eslintrc.yaml`

```yaml

```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: ESLint configuration ending with the extension `yaml` are not supported.
  


```
