crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_jest_consistent_test_it_no_options.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint --include-inspired --include-nursery --write
biome lint
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "preset": "none",
      "style": {
        "useConsistentTestIt": {
          "level": "error",
          "options": { "function": "test", "withinDescribe": "it" }
        }
      }
    }
  }
}
```

## `.eslintrc.json`

```json
{ "rules": { "jest/consistent-test-it": "error" } }
```

# Emitted Messages

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 1 ESLint rules found
    - 1 have been migrated to Biome's rules
    - 100% (1) of your ESLint rules are fully covered by Biome
      - 100% (1) via direct migration to Biome rules
  
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration successfully migrated.
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
```
