crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_merge_with_overrides.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint
```

## `biome.json`

```json
{
  "overrides": [
    {
      "includes": ["*.js"],
      "linter": { "enabled": false }
    }
  ]
}
```

## `.eslintrc.json`

```json
{
        "overrides": [{
            "files": ["bin/*.js", "lib/*.js", null],
            "excludedFiles": "*.test.js",
            "rules": {
                "eqeqeq": ["off"]
            }
        }]
    }
```

# Emitted Messages

```block
.eslintrc.json:3:47 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Incorrect type, expected a string, but received null.
  
    1 │ {
    2 │         "overrides": [{
  > 3 │             "files": ["bin/*.js", "lib/*.js", null],
      │                                               ^^^^
    4 │             "excludedFiles": "*.test.js",
    5 │             "rules": {
  

```

```block
biome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1  1 │   {
    2    │ - ········"overrides":·[{
    3    │ - ············"includes":·["*.js"],
    4    │ - ············"linter":·{·"enabled":·false·}
    5    │ - ········}]
    6    │ - ····}
       2 │ + → "linter":·{·"rules":·{·"preset":·"none"·}·},
       3 │ + → "overrides":·[
       4 │ + → → {·"includes":·["*.js"],·"linter":·{·"enabled":·false·}·},
       5 │ + → → {
       6 │ + → → → "includes":·["bin/*.js",·"lib/*.js",·"!*.test.js"],
       7 │ + → → → "linter":·{·"rules":·{·"suspicious":·{·"noDoubleEquals":·"off"·}·}·}
       8 │ + → → }
       9 │ + → ]
      10 │ + }
      11 │ + 
  

```

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 1 ESLint rules found
    - 1 can be migrated to Biome's rules (run with --write to migrate)
    - 100% (1) of your ESLint rules are fully covered by Biome
      - 100% (1) via direct migration to Biome rules
  
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ biome migrate --write
  

```
